<resources>
    <string name="app_name" translatable="false">Creative QR Maker</string>
    <string name="Scan" >Scan</string>
    <string name="Create" >Create</string>
    <string name="History" >History</string>
    <string name="Settings" >Settings</string>
    <string name="Gallery" >Gallery</string>
    <string name="Flashlight" >Flashlight</string>
    <string name="Text" >Text</string>
    <string name="Website" >Website</string>
    <string name="WiFi" >Wi-Fi</string>
    <string name="Facebook" >Facebook</string>
    <string name="Youtube" >Youtube</string>
    <string name="Whatsapp" >Whatsapp</string>
    <string name="Contacts" >Contacts</string>
    <string name="Tel" >Tel</string>
    <string name="Email" >E-mail</string>
    <string name="SMS" >SMS</string>
    <string name="Paypal" >Paypal</string>
    <string name="Instagram" >Instagram</string>
    <string name="Viber" >Viber</string>
    <string name="Twitter" >Twitter</string>
    <string name="Calendar" >Calendar</string>
    <string name="Hint" >Hint</string>
    <string name="SureToDelete" >Sure To Delete?</string>
    <string name="NO" >NO</string>
    <string name="YES" >YES</string>
    <string name="Delete" >Delete</string>
    <string name="Areyousure" >Are you sure,want to Exit?</string>
    <string name="Success" >Success</string>
    <string name="Open" >Open</string>
    <string name="share">Share</string>
    <string name="copy">COPY</string>
    <string name="title">Title:</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone number:</string>
    <string name="email_address">Email address:</string>
    <string name="e_mail">E-mail:</string>
    <string name="security_mode">Security mode:</string>
    <string name="wi_fi_name">Wi-Fi Name:</string>
    <string name="password">Password:</string>
    <string name="time">Time</string>
    <string name="please_enter_something">Please enter something</string>
    <string name="facebook_id">Facebook ID</string>
    <string name="url">URL</string>
    <string name="enter_facebook_id">Enter Facebook ID</string>
    <string name="username">Username</string>
    <string name="me_link">Me Link</string>
    <string name="me_username">Me Username</string>
    <string name="save">Save</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="hender" translatable="false">www.</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="others_can_contact_you_directly">Others can contact you directly on Viber by scanning the QR code you create.</string>
    <string name="network_name_ssid">Network name (SSID)</string>
    <string name="wpa_wpa2">WPA/WPA2</string>
    <string name="wep">WEP</string>
    <string name="none">None</string>
    <string name="video_id">Video ID</string>
    <string name="channel_id">Channel ID</string>
    <string name="no_qr_code_entered">No QR code entered</string>
    <string name="facebook_profile_url">Facebook Profile URL</string>
    <string name="enter_instagram_username">Enter Instagram Username</string>
    <string name="paypalme_link">Paypal.me link</string>
    <string name="paypalme_username">Paypal.me Username</string>
    <string name="_username">\@Username</string>
    <string name="enter_youtube_url">Enter Youtube URL</string>
    <string name="enter_youtube_video_id">Enter Youtube Video ID</string>
    <string name="enter_youtube_channel_id">Enter Youtube Channel ID</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="app_version">Version %s.GPA</string>


</resources>