<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sp_bg"
    tools:context=".activity.ExitActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/shape_list_create_item"
        android:elevation="10dp">

        <TextView
            android:id="@+id/exit_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/Delete"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/exit_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exit_tv1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="@string/Areyousure"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/exit_yes"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_below="@id/exit_tv2"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/exit_yes"
            android:gravity="center"
            android:paddingLeft="18dp"
            android:paddingTop="6dp"
            android:paddingRight="18dp"
            android:paddingBottom="6dp"
            android:text="@string/YES"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/exit_no"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_below="@id/exit_tv2"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/exit_yes"
            android:background="@drawable/create_bg"
            android:gravity="center"
            android:text="@string/NO"
            android:textColor="@color/black" />


    </RelativeLayout>

</RelativeLayout>