<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sp_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/head"
        layout="@layout/layout_create_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/sss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/include_icon"
                    layout="@layout/layout_create_category" />

                <TextView
                    android:id="@+id/url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/include_icon"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/network_name_ssid"
                    android:textColor="#7C7C7D"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_input"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_below="@+id/url"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/cale_edit_bg"
                    android:gravity="left|center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/jiami"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_input"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/security_mode"
                    android:textColor="#7C7C7D" />

                <RadioGroup
                    android:id="@+id/tre"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_below="@+id/jiami"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="30dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/WPA"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/wifi_radio_bg"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/wpa_wpa2"
                        android:textColor="@color/web_text" />

                    <RadioButton
                        android:id="@+id/WEP"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@+id/WPA"
                        android:layout_weight="1"
                        android:background="@drawable/wem_com_bg"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/wep"
                        android:textColor="@color/web_text" />

                    <RadioButton
                        android:id="@+id/wu"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/WEP"
                        android:layout_weight="1"
                        android:background="@drawable/wem_com_bg"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/none"
                        android:textColor="@color/web_text" />

                </RadioGroup>

                <TextView
                    android:id="@+id/mima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tre"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/password"
                    android:textColor="#7C7C7D" />

                <EditText
                    android:id="@+id/et_input2"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_below="@+id/mima"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/cale_edit_bg"
                    android:gravity="left|center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/wifi_create"
                    android:layout_width="220dp"
                    android:layout_height="54dp"
                    android:layout_below="@+id/et_input2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="67dp"
                    android:background="@drawable/create_bg"
                    android:gravity="center"
                    android:text="@string/Create"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
