<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sp_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/head"
        layout="@layout/layout_create_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/sss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/include_icon"
                    layout="@layout/layout_create_category" />

                <TextView
                    android:id="@+id/zzz"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_below="@id/include_icon"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/Calendar_input1"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_below="@+id/zzz"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/cale_edit_bg"
                    android:gravity="left|center"
                    android:textColor="@color/white"
                    android:textColorHint="#4E5375" />

                <RelativeLayout
                    android:id="@+id/gg"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_below="@+id/Calendar_input1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="30dp">

                    <TextView
                        android:id="@+id/zzx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/start"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/Calendar_input2"
                        android:layout_width="wrap_content"
                        android:layout_height="16dp"
                        android:layout_marginLeft="250dp"
                        android:gravity="center"
                        android:text="@string/time"
                        android:textColor="@color/purple_500"
                        android:textStyle="bold" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/ss"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_below="@+id/gg"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="30dp">

                    <TextView
                        android:id="@+id/zzg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/end"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/Calendar_input3"
                        android:layout_width="wrap_content"
                        android:layout_height="16dp"
                        android:layout_marginLeft="250dp"
                        android:gravity="center"
                        android:text="@string/time"
                        android:textColor="@color/purple_500"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ggg"
                    android:layout_width="match_parent"
                    android:layout_height="156dp"
                    android:layout_below="@id/ss"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="30dp">

                    <TextView
                        android:id="@+id/zzq"
                        android:layout_width="wrap_content"
                        android:layout_height="16dp"
                        android:gravity="center"
                        android:text="@string/description"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/Calendar_input4"
                        android:layout_width="match_parent"
                        android:layout_height="128dp"
                        android:layout_below="@+id/zzq"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/cale_edit_bg"
                        android:gravity="top"
                        android:hint="@string/please_enter_something"
                        android:paddingLeft="10dp"
                        android:paddingTop="12dp"
                        android:textColorHint="#4E5375"
                        android:textSize="12sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/cale_create"
                    android:layout_width="220dp"
                    android:layout_height="54dp"
                    android:layout_below="@+id/ggg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/create_bg"
                    android:gravity="center"
                    android:text="@string/Create"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
