<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sp_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/head"
        layout="@layout/layout_create_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/sss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/include_icon"
                    layout="@layout/layout_create_category" />

                <TextView
                    android:id="@+id/zzz"
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"
                    android:layout_below="@id/include_icon"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/Viber_input1"
                    android:layout_width="58dp"
                    android:layout_height="38dp"
                    android:layout_below="@+id/zzz"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/cale_edit_bg"
                    android:gravity="center"
                    android:textColor="#3CB7D3 "
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/Viber_input2"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_below="@+id/zzz"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@id/Viber_input1"
                    android:background="@drawable/cale_edit_bg"
                    android:gravity="left|center"
                    android:hint="@string/phone_number_hint"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="#999999"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/Viber_input2"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/others_can_contact_you_directly"
                    android:textColor="#999999"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/viber_create"
                    android:layout_width="220dp"
                    android:layout_height="54dp"
                    android:layout_below="@+id/text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="189dp"
                    android:background="@drawable/create_bg"
                    android:gravity="center"
                    android:text="@string/Create"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
