<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sp_bg"
    tools:context="com.smart.smartqreditor.ice.smart.smartqreditor.result_activity.ResultTextActivity">

    <include
        android:id="@+id/head"
        layout="@layout/layout_create_toolbar" />


    <RelativeLayout
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:background="@drawable/shape_list_create_item"
        android:elevation="5dp">

        <TextView
            android:id="@+id/result_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="51dp"
            android:text="@string/WiFi"
            android:textColor="#3CB7D3"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result_website_input"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result_text_title"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="23dp"
            android:text="@string/wi_fi_name"
            android:textColor="#999999"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/res_wifi_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result_text_title"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="21dp"
            android:layout_toRightOf="@id/result_website_input"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/result_website_input2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result_website_input"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="#999999"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/res_wifi_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/res_wifi_tv1"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="13dp"
            android:layout_toRightOf="@id/result_website_input2"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <include
            android:id="@+id/save_copy_activity"
            layout="@layout/activity_save_copy" />

        <include
            android:id="@+id/save_share_activity"
            layout="@layout/activity_share" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_below="@id/head"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/result_pic_bg"
        android:elevation="10dp">

        <ImageView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_centerInParent="true"
            android:src="@drawable/wifi" />
    </RelativeLayout>

</RelativeLayout>